# RondoudouPatchBenchmark

./: .gitignore  QuickBench.txt  README.md
src/: CMakeLists.txt
src/CipherBenchmarks/: CMakeLists.txt  rondoudou_patch2.cpp  rondoudou_patch2.h
